# seamig

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
examples/api/: Cargo.toml
examples/api/src/: lib.rs  main.rs
src/: lib.rs
