[package]
name = "seamig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
darling = "0.13.1"
bae = "0.1.7"
quote = "1.0"
proc-macro2 = "1.0.36"
core = { path = "./core" }
